--- a/themes/hugo-theme-console/layouts/_default/baseof.html
+++ b/themes/hugo-theme-console/layouts/_default/baseof.html
@@ -18,7 +18,7 @@
       <![endif]-->
     ` | safeHTML }}
 
-    {{- partial "favicon.html" . -}}
+    {{ partial "favicon.html" . }}
     {{ with .OutputFormats.Get "RSS" }}
       {{ printf `<link href="%s" rel="%s" type="%s" title="%s" />` .Permalink .Rel .MediaType.Type $.Site.Title | safeHTML }}
     {{ end }}
