--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,3 @@
 <div class="footer">
-    Powered by <a href="https://gohugo.io/">Hugo</a> with
-    the help of little elves in your computer. 
+    © 2024 The Maddie Portal  <a href=\"https://creativecommons.org/licenses/by/4.0/\">Some rights reserved</a>. 
 </div>
