--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,3 @@
 <div class="footer">
-    © 2024 The Maddie Portal  <a href=\"https://creativecommons.org/licenses/by/4.0/\">Some rights reserved</a>. 
+    © 2024 The Maddie Portal  <a href="https://creativecommons.org/licenses/by/4.0/">Some rights reserved</a> Some rights reserved</a>. 
 </div>
