--- a/layouts/index.html
+++ b/layouts/index.html
@@ -39,20 +39,6 @@ Hello! Welcome to my blog. Enjoy my aimless flow of thought.  <a href="about/">(
 {{ end }}
 </div>
 
-<h1>Latest photos</h1>
-
-<div class="image-grid">
-{{ with .Site.GetPage "/photos" }}
-    {{ range first 3 (sort .Data.Pages "Date" "desc")}}
-        <a href="{{ .Permalink }}" title="{{ .Title }}">
-        {{ $image := .Page.Resources.GetMatch .Params.image }}
-        {{ with $image }}
-            {{ $thumb := .Resize "400x" }}
-            <img src="{{ $thumb.RelPermalink }}" alt="{{ .Title }}" class="img-responsive">
-        {{end}}
-        </a>
-    {{ end }}
-{{ end }}
-</div>
+<!-- add photos back here, refer to previous builds -->
 
 {{ end }}
