--- a/static/hugo-theme-console/css/console.css
+++ b/static/hugo-theme-console/css/console.css
@@ -32,19 +32,19 @@
 
 :root {
     --global-font-size: 16px;
-    --global-font-color: #444;
+    --global-font-color: #ffffff;
     --mono-font-stack: Georgia, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
     --font-stack: Georgia, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
     --global-line-height: 1.6em;
     --page-width: 70em;
     --display-h1-decoration: 1;
-    --code-bg-color: #fff;
+    --code-bg-color: #491005;
 }
 
 @media only screen and (max-width: 850px) {
     :root {
         --global-font-size: 14px;
-        --global-font-color: #444;
+        --global-font-color: #ffffff;
         --global-line-height: 1.6em;
         --page-width: 70em;
     }
@@ -58,7 +58,7 @@
 }
 
 .box-masonry .box-masonry-image {
-    background: #fff;
+    background: #491005;
 }
 
 .box-masonry,
@@ -73,7 +73,7 @@
 body {
     font-family: var(--font-stack);
     font-size: var(--global-font-size);
-    background-color: #fff;
+    background-color: #491005;
     margin-bottom: 75px;
 }
 
@@ -122,7 +122,7 @@ h1 {
 
 p.social a {
     margin: 0 0 10px 0;
-    color: #fff;
+    color: #491005;
     display: inline-block;
     width: 30px;
     height: 30px;
